# footie

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.benchmarks/Darwin-CPython-3.14-64bit/: 0001_9be34db523468bcff9fab0b38739147fdb0f7d7b_20260618_142409.json  0002_7e252dbf411375c3d014f2229b29c8c4c1cc8056_20260618_221439_uncommited-changes.json  0003_4f0859fd61649f116733b729ce35ad67251da05c_20260619_142046_uncommited-changes.json  0004_0004.json
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  QUALITY.md  STACK.md
.planning/research/: ASYNC-SCRAPING.md  BACKEND-COMPUTE.md  CACHING.md  FRONTEND-TOOLING.md  SUMMARY.md
data/: icons_seed.json  objectives.json  players.json  sbcs.json
docs/: 01-gameplay-settings.md  02-tactics-fc-iq.md  03-formations-lineups.md  04-player-roles.md  05-player-acquisitions.md  06-skill-and-mechanics.md  07-game-modes.md  08-player-ratings-top100.md  09-fastest-players-and-pace-meta.md  10-fastest-xi.md  11-special-cards.md
fc26/: __init__.py  cli.py  db.py  errors.py  known_names.py  merge.py  models.py
fc26/api/: app.py
fc26/builder/: __init__.py  advise.py  boost.py  build.py  market.py  meta.py  plan.py  upgrade.py  value.py
fc26/chem/: __init__.py  aliases.py  engine.py  formations.py  lineup.py  (+2 more)
squads/: Haaland-squad-upgraded.json  Haaland-squad.json  ICON-SQUAD.json  Sasic-cheatcode-upgraded.json  Sasic-cheatcode.json  sample-rivals.json
tests/: conftest.py  test_advise.py  test_api.py  test_api_perf.py  test_boost.py  test_build.py  test_builder_meta.py  test_chem_engine.py  test_chem_rules.py  test_cli.py  test_cli_startup.py  test_db.py  test_db_cache.py  test_discovery.py  test_enrich.py  test_expand.py  test_fcratings.py  test_fcratings_player.py  test_futbin.py  test_futgg.py  test_images.py  test_ingest_async.py  test_lineup.py  test_merge.py  test_models.py  test_plan.py  test_refresh.py  test_search.py  test_seed.py  test_styles.py  test_upgrade.py  test_value.py  test_web.py  test_web_async.py
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+174 files in other folders)
