[project]
name = "fc26"
version = "0.1.0"
description = "FC 26 (PS5) FUT player database and squad assistant"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "selectolax>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
fc26 = "fc26.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fc26", "tests"]

[tool.pytest.ini_options]
markers = ["live: hits the real network (opt-in via --run-live)"]
