[project]
name = "fc26"
version = "0.1.0"
description = "FC 26 (PS5) FUT player database and squad assistant"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "curl_cffi>=0.7",
    "selectolax>=0.3",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "pytest-benchmark>=5,<6", "py-spy>=0.4"]

[project.scripts]
fc26 = "fc26.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fc26*"]

[tool.pytest.ini_options]
markers = [
    "live: hits the real network (opt-in via --run-live)",
    "benchmark: performance benchmark (opt-in via --run-bench)",
    "golden: golden-output equivalence check (opt-in via --run-bench)",
]
